--- a/package.json
+++ b/package.json
@@ -1,69 +1,23 @@
 {
-  "name": "gemglow-jewels",
+  "name": "bazar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "test": "jest",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.0",
-    "@prisma/client": "^5.10.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@reduxjs/toolkit": "^2.2.1",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.4.0",
-    "axios": "^1.6.7",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.0.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
-    "motion": "^11.0.5",
-    "next": "16.0.0",
-    "next-auth": "^5.0.0-beta.13",
-    "nodemailer": "^6.9.9",
-    "papaparse": "^5.4.1",
-    "pdf-lib": "^1.17.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.50.1",
-    "react-redux": "^9.1.0",
-    "recharts": "^2.12.0",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
-    "stripe": "^14.17.0",
-    "twilio": "^4.22.0",
-    "zod": "^3.22.4"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "next": "16.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/postcss": "^4.1.16",
-    "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "autoprefixer": "^10.4.21",
-    "cypress": "^13.6.4",
+    "babel-plugin-react-compiler": "1.0.0",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.5.6",
-    "prisma": "^5.10.0",
-    "tailwindcss": "^4.1.16"
+    "eslint-config-next": "16.0.1"
   }
 }
